# cs336-assignment1

./: .gitignore  CLAUDE.md  TODO.md  decode_usage_example.md  training_guide.md
code/: bpe_tokenizer.py  train.py  transformer_accounting.ipynb  transformers.py
rust_bpe/: Cargo.toml  README.md  pyproject.toml
rust_bpe/docs/: MEMORY_OPTIMIZATION.md  PYTHON_INTERFACE_DESIGN.md  README.md  U16_MIGRATION_COMPLETE.md  U16_VS_I32_BENCHMARK.md
rust_bpe/src/: lib.rs  lib_i32_backup.rs
tests/: adapters.py
tokenizer_output/tiny_stories_10000/: merges.txt  training_stats.txt  vocab.json
